--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Pernikahan &mdash; Naufal Farras & Wulan</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Pernikahan Ahmad Zaid & Laila" />
+	<meta name="description" content="Pernikahan Naufal Farras & Wulana" />
 	<meta name="author" content="Djazuli IT" />
 
 
-	<meta property="og:title" content="Pernikahan Ahmad Zaid & Laila"/>
+	<meta property="og:title" content="Pernikahan Naufal Farras & Wulan"/>
 	<meta property="og:image" content="images/nikah.png"/>
 	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content="Pernikahan Ahmad Zaid & Laila"/>
-	<meta property="og:description" content="Pernikahan Ahmad Zaid & Laila"/>
-	<meta name="twitter:title" content="Pernikahan Ahmad Zaid & Laila" />
+	<meta property="og:site_name" content="Pernikahan Naufal Farras & Wulan"/>
+	<meta property="og:description" content="Pernikahan Naufal Farras & Wulan"/>
+	<meta name="twitter:title" content="Pernikahan Naufal Farras & Wulan" />
 	<meta name="twitter:image" content="images/nikah.png" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
